# peloptimize

./: .buildinfo  .bumpversion.cfg  .cookiecutter.json  .env  .gitignore  AUTHORS.md  CONTRIBUTING.md  HISTORY.md  LICENSE  Makefile  README.md  authors.html  codeofconduct.html  contributing.html  coverage.xml  genindex.html  history.html  index.html  license.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  reference.html  requirements.html  requirements.txt  searchindex.js  setup.cfg  setup.py  tbump.toml  usage.html
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codecov.yml  constraints.txt  documentation.yml  release.yml
_modules/: contextlib.html  datetime.html  index.html  pathlib.html
_modules/pelopt/: io.html
_modules/pelopt/dataprep/: datatools.html
_modules/pelopt/helpers/: tag_utils.html
_modules/pelopt/utils/: limits.html  plant_module.html
_sources/: reference.md.txt
_sources/api/: index.rst.txt
api/: index.html
conda.recipe/: meta.yaml
docs/: Makefile  conf.py  index.md  reference.md  requirements.txt  usage.md
docs/docs/doctrees/: authors.doctree  codeofconduct.doctree  contributing.doctree  history.doctree  index.doctree  license.doctree  reference.doctree  requirements.doctree  usage.doctree
docs/docs/html/: authors.html  codeofconduct.html  contributing.html  genindex.html  history.html  index.html  license.html  objects.inv  py-modindex.html  reference.html  requirements.html  search.html  searchindex.js  usage.html
docs/docs/html/_modules/: contextlib.html  datetime.html  index.html  pathlib.html
docs/docs/html/_sources/: index.md.txt  index.rst.txt
notebooks/: 01. Preprocessamento.ipynb  02. Modelos Preditivos.ipynb  README.md
src/pelopt/: __init__.py  __main__.py  cli.py  config.py  io.py  tags.py
src/pelopt/cluster/: checkup.py  install_dependencies.py
src/pelopt/constants/: depara_pisystem.py
src/pelopt/dataprep/: datatools.py
src/pelopt/helpers/: fileutils.py  tag_utils.py
src/pelopt/usina/: calc_tags.py  datasets_confs.py  datasets_limits.py  df_detailed.py  predictive_module.py  preprocess.py  preprocess_utils.py
src/pelopt/utils/: constraints.py  limits.py  logging_config.py  model_module.py  operations.py  outputs.py  plant_module.py  predictive_module.py  pulp_solver.py  solver_operations.py  sql_module.py  utils.py
src/wip/: LEGACY_Modelos-Preditivo.py  LEGACY_Otimizacao.py  LEGACY_preprocessamento.py  OLD_Modelos-Preditivo.py  OLD_preprocessamento.py  debug_otm.py  debug_otm_result.py  export.py  modelos_preditivo.py  otimizacao.py  preprocessamento.py  tags_faltando.py
src/wip/files/: complex_constraints.py  constant_limits.py  custo_real.py  datasets_confs.py  datasets_limits.py  df_detailed.py  fixed_limits.py  general_constraints.py  limits.py  norm_limits.py  process_tag_map.py  quantile_limits.py  range_complex_constraints.py  range_constraints.py  rolling_limits.py  tags.py  variable_constraints.py
src/wip/model_diagnostics/: modelAbrasao.py  modelCarbonoFixo.py  modelCompressao.py  modelTaxaRetorno.py  modelUmidade.py  modelingUS08.py
src/wip/modules/: OLD_model_module.py  OLD_pulp_solver.py  OLD_pysolver.py  __init__.py  constants.py  constraints.py  limits.py  operations.py  outputs.py  predictive_module.py  solver_operations.py
tests/: __init__.py  test_main.py
(+29 files in other folders)
